# device_camera_freenect

./: CMakeLists.txt
cmake/: FindFreenect.cmake
doc/utql/Sensor/: FreenectFrameGrabber.xml
src/FreenectFrameGrabber/: FreenectFrameGrabber.cpp  FreenectFrameGrabber.h  SConscript  freenect_device.hpp  image_buffer.hpp
